--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.3.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
